# frontierwatch

./: biotech-watch-spec.md  computing-ai-watch-spec.md  economics-behavioural-science-watch-spec.md  energy-watch-spec-v2.md  energy-watch-spec.md  monetary-policy-briefing-spec.md  pyproject.toml  requirements.txt  securities-futures-regulatory-watch-spec.md
.github/workflows/: biotech.yml  computing_ai.yml  economics.yml  energy.yml  monetary_policy.yml  securities_futures.yml
docs/: feed.xml  feed_data.json  index.html
frontierwatch/: __init__.py  __main__.py  cli.py
frontierwatch/briefings/: __init__.py  base.py  biotech.py  computing_ai.py  economics.py  energy.py  monetary_policy.py  securities_futures.py
frontierwatch/output/: notion.py  rss.py
frontierwatch/processing/: synthesizer.py
frontierwatch/sources/: perplexity.py
specs/: biotech-watch-spec.md  securities-futures-regulatory-watch-spec.md
